Fixed extra space issue in Team section

--- a/src/Pages/Team/Team.module.css
+++ b/src/Pages/Team/Team.module.css
@@ -36,16 +36,15 @@
 }
 
 .mainimgdiv {
-  margin: 70px;
+  margin: 30px 0;
   min-width: 300px;
   max-width: 60vw;
-   aspect-ratio: 1 / 1; 
 }
 .team_img {
   border-radius: 30px;
   width: 100%;
-  height:50%;
-   object-fit: cover; 
+  height: auto;
+  object-fit: cover;
 }
 /* .team_container {
   display: flex;
